fix(Dashboard): dark mode BREAKING CHANGE:

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -54,9 +54,9 @@
                   width: 100%;
                   // height: 369px;
                   border-radius: 6px;
-                  background: #ffffff;
+                  //background: #ffffff;
                   border: 1px solid #d2d7e5;
-                  box-shadow: 0 3px 6px #cad0e2;
+                  //box-shadow: 0 3px 6px #cad0e2;
               }
               .leads .tableFilter {
                   padding-right: 35px;
@@ -128,7 +128,7 @@
               }
               .leads .table td {
                   font-size: 19px;
-                  color: rgba(17, 17, 17, 0.7);
+                  //color: rgba(17, 17, 17, 0.7);
                   font-weight: 500;
                   line-height: 24px;
                   padding: 21px 0px;
