--- a/src/components/Exposure/index.module.scss
+++ b/src/components/Exposure/index.module.scss
@@ -1,5 +1,5 @@
 .card {
-  box-shadow: 0px 3px 12px #E5E7ED;
+  //box-shadow: 0px 3px 12px #E5E7ED;
   border: 1px solid #D2D7E5;
   border-radius: 8px;
   margin-bottom: 24px;
