--- a/src/components/styles/globals.scss
+++ b/src/components/styles/globals.scss
@@ -175,6 +175,15 @@ body.light-mode .text {
   color: #00000080 !important;
  
 }
+body.dark-mode .text1 {
+  color: #FFFFFF80 !important;
+
+}
+
+body.light-mode .text1 {
+  color: #000000 !important;
+ 
+}
 body.dark-mode .label_heading_login {
   color: #FFFFFF80;
   background: #171E27 !important;
